# Task_tracker_for_employees

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 57387acac28b_database_creation.py  5b32651a8f08_update_tasks_parent_task_id_field.py  cd5dbb8ed144_database_creation.py  f80b1f9bd090_final_migration.py
src/: config.py  main.py
src/core/: .env.sample  config.py
src/crud/: employee_crud.py  task_crud.py
src/db/: database.py
src/models/: __init__.py  employee.py  employee_model.py  task.py  task_model.py
src/routers/: employees_routers.py  tasks_routers.py
src/schemas/: employee_schema.py  task_schema.py
