[tool.poetry]
name = "task-tracker-for-employees"
version = "0.1.0"
description = ""
authors = ["Pvl1307 <ivanov.pavel.1307@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.1"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
